# pingall

./: __main__.py  deps.py  flake.nix  pyproject.toml  remotebuild.sh  renovate.json
.github/workflows/: deploy.yml  pull_request.yml
app/: Cargo.toml
app/src/: main.rs
faas/: alicloud.py  aws.py  azure.py  gcp.py
nix/: pinger.nix  zip.nix
ping-service/: Dockerfile  pyproject.toml
ping-service/ping_thing/: main.py
vms/: __init__.py
