[project]
authors = [{ name = "Rhys Davies", email = "rhys@memes.nz" }]
requires-python = "<4.0,>=3.11"
dependencies = [
    "pulumi==3.220.0",
    "pulumi-gcp==9.12.0",
    "pulumi-google-native==0.32.0",
    "pulumi-azure-native==2.73.0",
    "pulumi-docker==4.11.0",
    "pulumi-aws==7.19.0",
    "pulumi-containerregistry==0.0.14",
    "pulumi-alicloud==3.95.0",
    "setuptools==82.0.0",
    "pulumi-std==2.3.2",
    "pip==26.0.1",
    "pulumi-docker-build==0.0.15",
]
name = "pingall"
version = "0.1.0"
description = ""
readme = "README.md"
package-mode = false
