[project]
authors = [{ name = "Rhys Davies", email = "rhys@memes.nz" }]
requires-python = "<4.0,>=3.11"
dependencies = [
    "pulumi==3.239.0",
    "pulumi-gcp==9.23.0",
    "pulumi-google-native==0.32.0",
    "pulumi-azure-native==2.92.2",
    "pulumi-docker==5.0.0",
    "pulumi-aws==7.30.0",
    "pulumi-containerregistry==0.0.14",
    "pulumi-alicloud==3.102.0",
    "setuptools==82.0.1",
    "pulumi-std==2.3.2",
    "pip==26.1.1",
    "pulumi-docker-build==0.0.17",
]
name = "pingall"
version = "0.1.0"
description = ""
readme = "README.md"
package-mode = false
