[package]
name = "pinger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.2", features = [
    "http2",
    "rustls-tls-webpki-roots",
    "hickory-dns",
    "charset",
], default-features = false }
tokio = { version = "1", features = ["full"] }
warp = { version = "0.4.1", features = ["server"] }
serde = { version = "1.0", features = ["derive"] }


[features]
gcp = []
alicloud = []
azure = []
aws = []
