[package]
name = "pinger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.13.2", features = ["hickory-dns"] }
tokio = { version = "1", features = ["full"] }
warp = { version = "0.4.1", features = ["server"] }
serde = { version = "1.0", features = ["derive"] }
webpki-root-certs = "1.0.4"


[features]
gcp = []
alicloud = []
azure = []
aws = []
