[project]
authors = [{ name = "Rhys Davies", email = "rhys@memes.nz" }]
requires-python = "<4.0,>=3.10"
dependencies = [
    "fastapi==0.128.0",
    "uvicorn==0.40.0",
    "aiohttp[speedups]==3.13.3",
    "asyncstdlib==3.13.1",
    "google-auth==2.45.0",
    "requests==2.32.5",
    "google-cloud-storage==3.7.0",
    "aioboto3==15.5.0",
    "pyjwt>=2.10.1",
    "async-cache>=1.1.1",
    "cryptography>=46.0.2",
]
name = "ping-thing"
version = "0.1.0"
description = ""
readme = "README.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
