[project]
authors = [{ name = "Rhys Davies", email = "rhys@memes.nz" }]
requires-python = "<4.0,>=3.10"
dependencies = [
    "fastapi==0.136.3",
    "uvicorn==0.49.0",
    "aiohttp[speedups]==3.13.5",
    "asyncstdlib==3.14.0",
    "google-auth==2.53.0",
    "requests==2.34.2",
    "google-cloud-storage==3.10.1",
    "aioboto3==15.5.0",
    "pyjwt>=2.10.1",
    "async-cache>=1.1.1",
    "cryptography>=46.0.2",
]
name = "ping-thing"
version = "0.1.0"
description = ""
readme = "README.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
